--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,4 +2,9 @@
 name = "showcase"
 version = "0.1.0"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "gradio>=5.0.0",
+    "openai>=1.0.0",
+    "requests>=2.31.0",
+    "python-dotenv>=1.0.0",
+]
